--- a/lib/GUI/index.hbs
+++ b/lib/GUI/index.hbs
@@ -1,127 +1,187 @@
 <!doctype html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>{{ name }}</title>
 
-    <link rel="icon" type="image/png" href="{{ baseUrl }}/-/static/favicon.png"/>
+    <link rel="icon" type="image/png" href="{{ baseUrl }}/-/static/favicon.png" />
     <link rel="stylesheet" type="text/css" href="{{ baseUrl }}/-/static/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body class="body">
-    <header class="main-header">
-      <nav class="navbar navbar-default red-bg white no-border no-rnd-cnr" role="navigation">
+</head>
+
+<body class="body">
+    {{!--s: 头部--}}
+    <header class="site-header jumbotron">
+        <nav class="navbar navbar-static-top main-navbar">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="{{ baseUrl }}" class="siteLogo">
+                    </a>
+                </div>
+                <nav class="collapse navbar-collapse">
+                    <!-- login/logout for large devices -->
+                    <form class="pull-right">
+                        {{#if username}}
+                        <p class="white no-bg pad-right-10 inline-block">Hi {{username}}</p>
+                        <a class="loginBtn js-userLogoutBtn">Logout</a> {{else}}
+                        <a class="loginBtn" data-toggle="modal" data-target="#login-form" onclick="return false">Login</a>                        {{/if}}
+                    </form>
+                    <form action="{{ baseUrl }}/-/logout" method="post" class="hide" id="userLogoutForm"></form>
+                </nav>
+            </div>
+        </nav>
         <div class="container">
-          <div class="navbar-header clearfix">
-            <div class="npm-logo brand">
-              <a href="{{ baseUrl }}"></a>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Available Packages</h1>
+                    <p>稳定、快速、免费的开源项目 CDN 服务
+                        <br>
+                        <span class="package-amount">共收录了
+                    <strong>1765</strong>
+                     个开源项目
+                    </span>
+                    </p>
+                    <form class="search-wraper">
+                        <div class="form-group">
+                            <input type="text" class="form-control search clearable" placeholder="Search for packages">
+                            <i class="icon-search"></i>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <!-- login/logout for small devices -->
-            <div class="pull-right visible-xs pad-right-10">
-              <div>
-                {{#if username}}
-                <p class="white no-bg navbar-text pad-right-10 inline-block">Hi {{username}}</p>
-                <button type="submit" class="btn btn-danger inline-block js-userLogoutBtn">Logout</button>
-                {{else}}
-                <p class="white no-bg navbar-text pad-right-10 inline-block">&nbsp;</p>
-                <button type="submit" class="btn btn-danger inline-block" data-toggle="modal" data-target="#login-form" onclick="return false">Login</button>
-                {{/if}}
-              </div>
-            </div>
-          </div>
-
-          <div class="navbar-left hidden-xs">&nbsp;&nbsp;</div>
-
-          <div class="navbar-left setup hidden-xs">
-            <code class="white no-bg">npm set registry {{ baseUrl }}</code><br>
-            <code class="white no-bg">npm adduser --registry {{ baseUrl }}</code>
-          </div>
-
-          <!-- login/logout for large devices -->
-          <div class="navbar-collapse collapse">
-            <div class="navbar-right">
-              <form class="navbar-form navbar-right">
-                {{#if username}}
-                <p class="white no-bg pad-right-10 inline-block">Hi {{username}}</p>
-                <button type="submit" class="btn btn-danger inline-block js-userLogoutBtn">Logout</button>
-                {{else}}
-                <button type="submit" class="btn btn-danger inline-block" data-toggle="modal" data-target="#login-form" onclick="return false">Login</button>
-                {{/if}}
-              </form>
-            </div>
-          </div>
-
-
         </div>
-      </nav>
-      <header class="sm-registry-info light-red-bg center hidden-sm hidden-lg hidden-md">
-        <code class="white no-bg">{{ baseUrl }}</code><br>
-      </header>
-      <header class="packages-header container">
-        <div class="row">
-          <div class="col-md-5 hidden-xs hidden-sm">
-            <h2 class="title">Available Packages</h2>
-          </div>
-          <div class="col-md-4 col-md-offset-3 col-sm-12">
-            <form id='search-form'>
-              <div class="input-group input-group-lg search-container">
-                <input type="text" class="form-control" placeholder="Search for packages">
-                <span class="input-group-btn">
-                  <button class="btn btn-default search-icon js-search-btn"><i class="icon-search"></i></button>
-                </span>
-              </div>
-            </form>
-          </div>
-        </div>
-      </header>
     </header>
+    {{!--e: 头部--}} 
 
-    <section class="content container packages-container" id="all-packages">
-        {{#each packages}}
-          {{> entry}}
-        {{/each}}
-
-        {{#unless packages.length}}
-          <div class='no-results'>
-            <big>No Packages</big><br>
-            Use <code>npm publish</code>
-          </div>
-        {{/unless}}
-    </section>
-
-    <section class="content container pkg-search-container" id="search-results"></section>
-
-    <div class="modal fade" id="login-form" tabindex="-1" role="dialog" aria-labelledby="login-form-label" aria-hidden="true">
-      <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h5 class="modal-title" id="login-form-label">Welcome back</h5>
-          </div>
-          <form role="form" action="{{ baseUrl }}/-/login" method="post" id="login-form" autocomplete="off">
-            <div class="modal-body">
-              <div class="form-group">
-                <label for="user" class="sr-only">Email</label>
-                <input name="user" id="user" class="form-control" placeholder="Username" type="text">
-              </div>
-              <div class="form-group">
-                <label for="pass" class="sr-only">Password</label>
-                <input name="pass" id="pass" class="form-control" placeholder="Password" type="password">
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Log in</button>
-            </div>
-          </form>
-        </div>
-      </div>
+    {{!--s: 正文--}}
+    <div class="setup hidden-xs center">
+        <code class="no-bg">npm set registry {{ baseUrl }}</code><br>
+        <code class="no-bg">npm adduser --registry {{ baseUrl }}</code>
     </div>
 
-    <form action="{{ baseUrl }}/-/logout" method="post" class="hide" id="userLogoutForm"></form>
+    <div class="packages-list-container" id="all-package">
+        <div class="container">
+            <div class="navLeft col-lg-3">
+                <div class="avatar">
 
+                </div>
+            </div>
+            <section class="list-group packages pull-right col-lg-9" id="all-packages">
+
+                {{#each packages}} {{> entry}} {{/each}} {{#unless packages.length}}
+                <div class='no-results'>
+                    <big>No Packages</big><br> Use <code>npm publish</code>
+                </div>
+                {{/unless}}
+
+            </section>
+            <section class="content container pkg-search-container" id="search-results"></section>
+
+        </div>
+    </div>
+    {{!--e: 正文--}}
+    {{!--s: 底部--}}
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="widget">
+                        <h4 class="title">最新文章</h4>
+                        <div class="content recent-post">
+                                <div class="recent-single-post">
+                                    <a href="/moving-to-node-js-v4-lts/" class="post-title">Node.js v4 LTS 成为 Ghost 推荐版本</a>
+                                    <div class="date">2016年7月26日</div>
+                                </div>
+                                <div class="recent-single-post">
+                                    <a href="/ghost-zhuo-mian-ban-app-geng-xin-neng-gou-tong-shi-guan-li-duo-ge-ghost-bo-ke/" class="post-title">Ghost 桌面版 APP 正式发布，能同时管理多个 Ghost 博客</a>
+                                    <div class="date">2016年4月28日</div>
+                                </div>
+                                <div class="recent-single-post">
+                                    <a href="/install-nodejs-of-latest-version-in-ubuntu-and-debian/" class="post-title">为 Ubuntu 和 Debian 安装最新版本的 Node.js</a>
+                                    <div class="date">2016年3月23日</div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="widget">
+                        <h4 class="title">标签云</h4>
+                        <div class="content tag-cloud">
+                                <a href="/tag/about-ghost/">Ghost</a>
+                                <a href="/tag/release/">新版本发布</a>
+                                <a href="/tag/javascript/">JavaScript</a>
+                                <a href="/tag/promise/">Promise</a>
+                                <a href="/tag/zhuti/">主题</a>
+                                <a href="/tag/nodejs/">Node.js</a>
+                                <a href="/tag/mysql/">MySQL</a>
+                                <a href="/tag/nginx/">Nginx</a>
+                                <a href="/tag/aliyun-ecs/">阿里云服务器</a>
+                                <a href="/tag/ubuntu/">Ubuntu</a>
+                                <a href="/tag/ghost-in-depth/">深度玩转 Ghost</a>
+                                <a href="/tag/theme/">Theme</a>
+                                <a href="/tag/markdown/">Markdown</a>
+                                <a href="/tag/proxy/">反向代理</a>
+                                <a href="/tag/apache/">Apache</a>
+
+                            <a href="/tag-cloud/">...</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="widget">
+                        <h4 class="title">合作伙伴</h4>
+                        <div class="content tag-cloud friend-links">
+                            <a href="http://www.bootcss.com" title="Bootstrap中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'bootcsscom'])" target="_blank">Bootstrap中文网</a>
+                            <a href="http://www.bootcdn.cn" title="开放CDN服务" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'bootcdncn'])" target="_blank">开放CDN服务</a>
+                            <a href="http://www.gruntjs.net" title="Grunt中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'gruntjsnet'])" target="_blank">Grunt中文网</a>
+                            <a href="http://www.gulpjs.com.cn/" title="Gulp中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'gulpjscomcn'])" target="_blank">Gulp中文网</a>
+                            <hr>
+                            <a href="http://lodashjs.com/" title="Lodash中文文档" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'lodashjscom'])" target="_blank">Lodash中文文档</a>
+                            <a href="http://www.jquery123.com/" title="jQuery中文文档" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jquery123com'])" target="_blank">jQuery中文文档</a>
+                            <hr>
+                            <a href="http://www.aliyun.com/" title="阿里云" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'aliyun'])" target="_blank">阿里云</a>
+                            <hr>
+                            <a href="https://www.upyun.com/" title="又拍云" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'upyun'])" target="_blank">又拍云</a>
+                            <a href="http://www.qiniu.com/" title="七牛云存储" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'qiniu'])" target="_blank">七牛云存储</a>
+                        </div>
+                </div></div>
+            </div>
+        </div>
+    </footer> 
+    {{!--e: 弹窗--}} 
+    {{!--s: 弹窗--}}
+    <div class="modal fade" id="login-form" tabindex="-1" role="dialog" aria-labelledby="login-form-label" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h5 class="modal-title" id="login-form-label">Welcome back</h5>
+                </div>
+                <form role="form" action="{{ baseUrl }}/-/login" method="post" id="login-form" autocomplete="off">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="user" class="sr-only">Email</label>
+                            <input name="user" id="user" class="form-control" placeholder="Username" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="pass" class="sr-only">Password</label>
+                            <input name="pass" id="pass" class="form-control" placeholder="Password" type="password">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Log in</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    {{!--e: 弹窗--}}
     <script src="{{ baseUrl }}/-/static/jquery.min.js"></script>
     <script type='text/javascript' src='{{ baseUrl }}/-/static/main.js'></script>
-  </body>
+</body>
+
 </html>
