--- a/lib/GUI/entry.hbs
+++ b/lib/GUI/entry.hbs
@@ -27,7 +27,9 @@
     </h4>
     <p class="package-description">{{ description }}</p>
     <div class="package-extra-info">
-        <span><i class="fa fa-star"></i>92793</span>
+        {{!--<span><i class="fa fa-star"></i>92793</span>--}}
+        <p>更新信息：{{ updateInfo }}</p>
+        <span>标签：{{ tags }}</span>
         <span class='version pull-right'>v {{ version }}</span>
     </div>
 </div>
