--- a/lib/GUI/entry.hbs
+++ b/lib/GUI/entry.hbs
@@ -27,7 +27,7 @@
     </h4>
     <p class="package-description">{{ description }}</p>
     <div class="package-extra-info">
-        <span><i class="fa fa-star"></i>92793</span>
+        <span><i class="fa fa-star"></i></span>
         <span class='version pull-right'>v {{ version }}</span>
     </div>
 </div>
