--- a/lib/GUI/index.hbs
+++ b/lib/GUI/index.hbs
@@ -24,8 +24,8 @@
                     <form class="pull-right">
                         {{#if username}}
                         <p class="white no-bg pad-right-10 inline-block">Hi {{username}}</p>
-                        <a class="loginBtn js-userLogoutBtn">Logout</a> {{else}}
-                        <a class="loginBtn" data-toggle="modal" data-target="#login-form" onclick="return false">Login</a>                        {{/if}}
+                        <a class="loginBtn js-userLogoutBtn">注销</a> {{else}}
+                        <a class="loginBtn" data-toggle="modal" data-target="#login-form" onclick="return false">登陆</a> {{/if}}
                     </form>
                     <form action="{{ baseUrl }}/-/logout" method="post" class="hide" id="userLogoutForm"></form>
                 </nav>
@@ -52,13 +52,11 @@
             </div>
         </div>
     </header>
-    {{!--e: 头部--}}
-
-    {{!--s: 正文--}}
+    {{!--e: 头部--}} {{!--s: 正文--}}
     <div class="setup hidden-xs center">
         <code class="no-bg">npm set registry {{ baseUrl }}</code><br>
         <code class="no-bg">npm adduser --registry {{ baseUrl }}</code><br>
-        <code ><a href="https://www.npmjs.com/" target="_blank">to npmjs.com find expected packages</a></code>
+        <code><a href="https://www.npmjs.com/" target="_blank">to npmjs.com find expected packages</a></code>
     </div>
 
     <div class="packages-list-container" id="all-package">
@@ -69,7 +67,6 @@
                 </div>
             </div>
             <section class="list-group packages" id="all-packages">
-
                 {{#each packages}} {{> entry}} {{/each}} {{#unless packages.length}}
                 <div class='no-results'>
                     <big>No Packages</big><br> Use <code>npm publish</code>
@@ -78,11 +75,10 @@
 
             </section>
             <section class="content container pkg-search-container" id="search-results"></section>
-
+            <h3 class="j-loadmore">点击加载更多</h3>
         </div>
     </div>
-    {{!--e: 正文--}}
-    {{!--s: 底部--}}
+    {{!--e: 正文--}} {{!--s: 底部--}}
     <footer class="main-footer">
         <div class="container">
             <div class="row">
@@ -90,18 +86,18 @@
                     <div class="widget">
                         <h4 class="title">最新文章</h4>
                         <div class="content recent-post">
-                                <div class="recent-single-post">
-                                    <a href="/moving-to-node-js-v4-lts/" class="post-title">Node.js v4 LTS 成为 Ghost 推荐版本</a>
-                                    <div class="date">2016年7月26日</div>
-                                </div>
-                                <div class="recent-single-post">
-                                    <a href="/ghost-zhuo-mian-ban-app-geng-xin-neng-gou-tong-shi-guan-li-duo-ge-ghost-bo-ke/" class="post-title">Ghost 桌面版 APP 正式发布，能同时管理多个 Ghost 博客</a>
-                                    <div class="date">2016年4月28日</div>
-                                </div>
-                                <div class="recent-single-post">
-                                    <a href="/install-nodejs-of-latest-version-in-ubuntu-and-debian/" class="post-title">为 Ubuntu 和 Debian 安装最新版本的 Node.js</a>
-                                    <div class="date">2016年3月23日</div>
-                                </div>
+                            <div class="recent-single-post">
+                                <a href="/moving-to-node-js-v4-lts/" class="post-title">Node.js v4 LTS 成为 Ghost 推荐版本</a>
+                                <div class="date">2016年7月26日</div>
+                            </div>
+                            <div class="recent-single-post">
+                                <a href="/ghost-zhuo-mian-ban-app-geng-xin-neng-gou-tong-shi-guan-li-duo-ge-ghost-bo-ke/" class="post-title">Ghost 桌面版 APP 正式发布，能同时管理多个 Ghost 博客</a>
+                                <div class="date">2016年4月28日</div>
+                            </div>
+                            <div class="recent-single-post">
+                                <a href="/install-nodejs-of-latest-version-in-ubuntu-and-debian/" class="post-title">为 Ubuntu 和 Debian 安装最新版本的 Node.js</a>
+                                <div class="date">2016年3月23日</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -110,21 +106,21 @@
                     <div class="widget">
                         <h4 class="title">标签云</h4>
                         <div class="content tag-cloud">
-                                <a href="/tag/about-ghost/">Ghost</a>
-                                <a href="/tag/release/">新版本发布</a>
-                                <a href="/tag/javascript/">JavaScript</a>
-                                <a href="/tag/promise/">Promise</a>
-                                <a href="/tag/zhuti/">主题</a>
-                                <a href="/tag/nodejs/">Node.js</a>
-                                <a href="/tag/mysql/">MySQL</a>
-                                <a href="/tag/nginx/">Nginx</a>
-                                <a href="/tag/aliyun-ecs/">阿里云服务器</a>
-                                <a href="/tag/ubuntu/">Ubuntu</a>
-                                <a href="/tag/ghost-in-depth/">深度玩转 Ghost</a>
-                                <a href="/tag/theme/">Theme</a>
-                                <a href="/tag/markdown/">Markdown</a>
-                                <a href="/tag/proxy/">反向代理</a>
-                                <a href="/tag/apache/">Apache</a>
+                            <a href="/tag/about-ghost/">Ghost</a>
+                            <a href="/tag/release/">新版本发布</a>
+                            <a href="/tag/javascript/">JavaScript</a>
+                            <a href="/tag/promise/">Promise</a>
+                            <a href="/tag/zhuti/">主题</a>
+                            <a href="/tag/nodejs/">Node.js</a>
+                            <a href="/tag/mysql/">MySQL</a>
+                            <a href="/tag/nginx/">Nginx</a>
+                            <a href="/tag/aliyun-ecs/">阿里云服务器</a>
+                            <a href="/tag/ubuntu/">Ubuntu</a>
+                            <a href="/tag/ghost-in-depth/">深度玩转 Ghost</a>
+                            <a href="/tag/theme/">Theme</a>
+                            <a href="/tag/markdown/">Markdown</a>
+                            <a href="/tag/proxy/">反向代理</a>
+                            <a href="/tag/apache/">Apache</a>
 
                             <a href="/tag-cloud/">...</a>
                         </div>
@@ -135,25 +131,28 @@
                     <div class="widget">
                         <h4 class="title">合作伙伴</h4>
                         <div class="content tag-cloud friend-links">
-                            <a href="http://www.bootcss.com" title="Bootstrap中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'bootcsscom'])" target="_blank">Bootstrap中文网</a>
+                            <a href="http://www.bootcss.com" title="Bootstrap中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'bootcsscom'])"
+                                target="_blank">Bootstrap中文网</a>
                             <a href="http://www.bootcdn.cn" title="开放CDN服务" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'bootcdncn'])" target="_blank">开放CDN服务</a>
                             <a href="http://www.gruntjs.net" title="Grunt中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'gruntjsnet'])" target="_blank">Grunt中文网</a>
-                            <a href="http://www.gulpjs.com.cn/" title="Gulp中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'gulpjscomcn'])" target="_blank">Gulp中文网</a>
+                            <a href="http://www.gulpjs.com.cn/" title="Gulp中文网" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'gulpjscomcn'])"
+                                target="_blank">Gulp中文网</a>
                             <hr>
                             <a href="http://lodashjs.com/" title="Lodash中文文档" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'lodashjscom'])" target="_blank">Lodash中文文档</a>
-                            <a href="http://www.jquery123.com/" title="jQuery中文文档" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jquery123com'])" target="_blank">jQuery中文文档</a>
+                            <a href="http://www.jquery123.com/" title="jQuery中文文档" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jquery123com'])"
+                                target="_blank">jQuery中文文档</a>
                             <hr>
                             <a href="http://www.aliyun.com/" title="阿里云" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'aliyun'])" target="_blank">阿里云</a>
                             <hr>
                             <a href="https://www.upyun.com/" title="又拍云" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'upyun'])" target="_blank">又拍云</a>
                             <a href="http://www.qiniu.com/" title="七牛云存储" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'qiniu'])" target="_blank">七牛云存储</a>
                         </div>
-                </div></div>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
-    {{!--e: 弹窗--}}
-    {{!--s: 弹窗--}}
+    {{!--e: 弹窗--}} {{!--s: 弹窗--}}
     <div class="modal fade" id="login-form" tabindex="-1" role="dialog" aria-labelledby="login-form-label" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
